--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <p>Hello World!</p>
 <button>Click Me!</button>
 <input type="text" name="" id="" placeholder="Name">
+<h1>Hi how are you?</h1>
+<p>Hello, I'm fine!</p>
